2010-12-30  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add m4/ChangeLog.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.18.1.

2008-03-27  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add m4/ChangeLog.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.17.

2006-11-04  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add scripts/config.rpath, scripts/mkinstalldirs, m4/ChangeLog.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
