@@ -1,1 +1,0 @@
-../library/stp_support
